--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>2.0.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
     </dependencies>
      <build>
         <finalName>hotel-project</finalName>
